--- a/01-knapsack-problem/problem.tex
+++ b/01-knapsack-problem/problem.tex
@@ -1,8 +1,7 @@
 \begin{align*}
-\text{maximize } & \sum_{j=1}^n p_j x_j \\
-\text{subject to } & \sum_{j=1}^n w_j x_j \leq c \\
+\text{maximize} \quad & \sum_{j=1}^n p_j x_j \\
+\text{subject to} \quad & \sum_{j=1}^n w_j x_j \leq c \\
 & x_j \in \lbrace 0, 1 \rbrace, \quad j = 1, \ldots,n
 \end{align*}
 
 
-https://latex.codecogs.com/png.image?\large&space;\dpi{200}\begin{align*}\text{maximize}&\sum_{j=1}^n&space;p_j&space;x_j\\\text{subject&space;to}&\sum_{j=1}^n&space;w_j&space;x_j\leq&space;c\\&x_j\in\lbrace&space;0,1\rbrace,\quad&space;j=1,\ldots,n\end{align*}
