Chnage the equations size for problem 01 and 02

--- a/05-d-dimensional-knapsack-problem/problem.tex
+++ b/05-d-dimensional-knapsack-problem/problem.tex
@@ -1,7 +1,6 @@
 \begin{align*}
 \text{maximize} \quad & \sum_{j=1}^n p_j x_j \\
-\text{subject to} \quad & \sum_{j=1}^n w_j x_j \leq c \\
+\text{subject to} \quad & \sum_{j=1}^n w_{ij} x_j \leq c, \quad i = 1, \ldots, d, \\
 & x_j \in \lbrace 0, 1 \rbrace, \quad j = 1, \ldots,n
 \end{align*}
-
 
