--- a/08-bottleneck-multiple-subset-sum-problem/problem.tex
+++ b/08-bottleneck-multiple-subset-sum-problem/problem.tex
@@ -1,8 +1,6 @@
 \begin{align*}
-\text{maximize} \quad & \sum_{i=1}^m \sum_{j=1}^n p_j x_{ij} \\
+\text{maximize} \quad & \min_{i=1, \ldots, m} \sum_{j=1}^n p_j x_{ij} \\
 \text{subject to} \quad & \sum_{j=1}^n w_j x_{ij} \leq c_i \quad i = 1, \ldots, m \\
 & \sum_{i=1}^m x_{ij} \leq 1, \quad j = 1, \ldots, n \\
 & x_{ij} \in \lbrace 0, 1 \rbrace, \quad j = 1, \ldots,n, \quad i = 1, \ldots, n,
 \end{align*}
-
-
