--- a/07-multiple-knapsack-problem/problem.tex
+++ b/07-multiple-knapsack-problem/problem.tex
@@ -2,7 +2,7 @@
 \text{maximize} \quad & \sum_{i=1}^m \sum_{j=1}^n p_j x_{ij} \\
 \text{subject to} \quad & \sum_{j=1}^n w_j x_{ij} \leq c_i \quad i = 1, \ldots, m \\
 & \sum_{i=1}^m x_{ij} \leq 1, \quad j = 1, \ldots, n \\
-& x_{ij} \in \lbrace 0, 1 \rbrace, \quad j = 1, \ldots,n, \quad i = 1, \ldots, n,
+& x_{ij} \in \lbrace 0, 1 \rbrace, \quad j = 1, \ldots,m, \quad i = 1, \ldots, n,
 \end{align*}
 
 
