--- a/10-generalized-multiple-choice-knapsack-problem/problem.tex
+++ b/10-generalized-multiple-choice-knapsack-problem/problem.tex
@@ -1,5 +1,5 @@
 \begin{align*}
-\text{maximize} \quad & \sum_{i=1}^m \sum_{j \in N_i}^n p_{ij} x_{ij} \\
+\text{maximize} \quad & \sum_{i=1}^m \sum_{j \in N_i} p_{ij} x_{ij} \\
 \text{subject to} \quad & \sum_{i=1}^m \sum_{j \in N_i} w_{ij} x_{ij} \leq c \\
 & \sum_{j \in N_i} x_{ij} \leq  a_i, \quad i \in L \\
 & \sum_{j \in N_i} x_{ij} \geq  a_i, \quad i \in G \\
