--- a/12-two-dimensional-two-stage-cutting-problem/problem.tex
+++ b/12-two-dimensional-two-stage-cutting-problem/problem.tex
@@ -1,10 +1,10 @@
 \begin{align}
 \text{maximize} \quad & \sum_{i=1}^k \sum_{j = 1}^n p_{j} x_{ij} \\
-\text{subject to} \quad & \sum_{j=1}^n w_{j} x_{ij} \leq W, \quad i = 1, \ldots, k, \\
-& \sum_{i=1}^k y_i \leq L, \\
-& \ell_j x_{ij}' \leq y_i, \quad i = 1, \ldots, k, \; j = 1, \ldots, n, \\
-& m_j x_{ij}' \geq x_{ij}, \quad i = 1, \ldots, k, \; j = 1, \ldots, n, \\
-& x_{ij} \in \lbrace 0, \ldots, m_j \rbrace , \quad i = 1, \ldots, k, \; j = 1, \ldots, n, \\
-& x_{ij}' \in \lbrace 0, 1 \rbrace , \quad i = 1, \ldots, k, \; j = 1, \ldots, n, \\
-& y_i \in \lbrace 1, \ldots, L \rbrace , \quad i = 1, \ldots, k.
+\text{subject to} \: & \text{(1)} \: \sum_{j=1}^n w_{j} x_{ij} \leq W, \quad i = 1, \ldots, k, \\
+& \text{(2)} \: \sum_{i=1}^k y_i \leq L, \\
+& \text{(3)} \: \ell_j x_{ij}' \leq y_i, \quad i = 1, \ldots, k, \quad j = 1, \ldots, n, \\
+& \text{(4)} \: m_j x_{ij}' \geq x_{ij}, \quad i = 1, \ldots, k, \quad j = 1, \ldots, n, \\
+& \text{(5)} \: x_{ij} \in \lbrace 0, \ldots, m_j \rbrace , \quad i = 1, \ldots, k, \quad j = 1, \ldots, n, \\
+& \text{(6)} \: x_{ij}' \in \lbrace 0, 1 \rbrace , \quad i = 1, \ldots, k, \quad j = 1, \ldots, n, \\
+& \text{(7)} \: y_i \in \lbrace 1, \ldots, L \rbrace , \quad i = 1, \ldots, k.
 \end{align} 
