--- a/16-linear-bottleneck-assignment-problem/problem.tex
+++ b/16-linear-bottleneck-assignment-problem/problem.tex
@@ -1,5 +1,5 @@
 \begin{align*}
-\text{minimize} \quad & \text{max}_{1 \leq i, j \leq n} c_{ij} x_{ij}, \\
+\text{minimize} \quad & \max_{1 \leq i, j \leq n} c_{ij} x_{ij}, \\
 \text{subject to} \quad & \text{(1)} \; \sum_{j=1}^n x_{ij} = 1, \quad i = 1, \ldots, n,  \\
 & \text{(2)} \; \sum_{i=1}^n x_{ij} = 1, \quad j = 1, \ldots, n,  \\
 & \text{(3)} \; x_{ij} \in \lbrace 0, 1 \rbrace, \quad i,j = 1, \ldots,n.
